--- a/cover.tex
+++ b/cover.tex
@@ -9,44 +9,58 @@
 \textsc{\LARGE Nanyang Technological University}\\[1.5cm]
 
 \textsc{\Large Final year project report}\\[1.2cm]
-\textsc{\Large SCE12-0548}\\[1cm]
+\textsc{\Large SCE12-0548}\\[0.6cm]
 
 % Title
 \HRule \\[0.4cm]
-{ \huge \bfseries Visual Event Recognition in Videos \\[0.4cm] }
+{ \huge \bfseries Visual Event Recognition\\[0.4cm] }
 \HRule \\[1.2cm]
 
 % Author and supervisor
 
-\begin{minipage}{0.4\textwidth}
+\begin{minipage}{0.5\textwidth}
 \begin{flushleft} \large
-\emph{Supervisor:} \\
+\emph{Supervisor:}
 A/P Xu Dong
 \end{flushleft}
 \end{minipage}
 
-\vfill
-\begin{minipage}{0.4\textwidth}
-\begin{flushleft} \large
-\emph{Examiner:} \\
-A/P Cham Tat Jen\\
-\end{flushleft}
-\end{minipage}
-\vfill
 
-\begin{minipage}{0.4\textwidth}
+
+\vspace{4 mm} 
+
+\begin{minipage}{0.5\textwidth}
 \begin{flushleft} \large
-\emph{Author:}\\
-Gong Li (U1022957A)
+\emph{Examiner:}
+A/P Cham Tat Jen
 \end{flushleft}
 \end{minipage}
+
+\vspace{4 mm}
+
+\begin{minipage}{0.5\textwidth}
+\begin{flushleft} \large
+\emph{Author:}
+Gong Li
+\end{flushleft}
+\end{minipage}
+
+
+\vspace{14 mm}
+\begin{center} \large
+Submitted in Partial Fulfillment of the Requirements\\ 
+for the Degree of Computer Engineering\\
+of Nanyang Technological University
+\end{center}
 
 \vfill
 
 % Bottom of the page
-\textsc{\bfseries SCHOOL OF COMPUTER ENGINEERING}
-\\
-\textbf{2013/2014}
+
+\begin{center}
+School of Computer Engineering \\
+November 2013
+\end{center}
 
 \end{center}
 \end{titlepage}
