--- a/report.tex
+++ b/report.tex
@@ -77,7 +77,7 @@
 \newcommand{\head}[1]{\textnormal{\textbf{#1}}}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 
-% \usepackage[font={it}]{caption}
+\usepackage[font=footnotesize,labelfont=bf]{caption}
 
 \begin{document}
 \include{cover}
