--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,2 +1,4 @@
 \section{Conclusion}
-In conclusion, a recognition system, which recognizes images and videos, has been successfully implemented in various approaches. In image recognition, spatial pyramid is adopted to represents images, and such representations of videos are later on input into SVM and KNN for classification. Moreover, earth mover's distance is incorporated into the calculation of image-to-image distances, and the experiments demonstrate the robustness of EMD. For video recognition, which is the main objective of this project, bag of words and specialized GMMs are used to represent videos compactly, and respective distance calculation methods are employed to measure video-to-video distances. Once the distance calculation is done, it is then converted into gram matrix using four different types of kernel, and SVM is employed to perform classification. Furthermore, four different domain adaptation methods are studied and implemented to improve the performance of classifiers by leveraging labelled samples from other domains. The best result is achieved by Adaptive Multiple Kernel Learning (A-MKL) through selecting two distance matrices smartly, and the recorded mean average precision $61.4\%$ is better than that reported in the studied paper \cite{duan2012visual}. Comprehensive experiments have been conducted on these various approaches, and detailed analysis is also included. Last but not least, a web-based demo system is built to better present the work in this project.  
+In conclusion, a recognition system, which recognizes images and videos, has been successfully implemented in various approaches. In image recognition, spatial pyramid is adopted to represents images, and such representations of videos are later on input into SVM and KNN for classification. Moreover, earth mover's distance is incorporated into the calculation of image-to-image distances, and the experiments demonstrate the robustness of EMD. For video recognition, which is the main objective of this project, bag of words and specialized GMMs are used to represent videos compactly, and respective distance calculation methods are employed to measure video-to-video distances. Once the distance calculation is done, it is then converted into gram matrix using four different types of kernel, and SVM is employed to perform classification. Furthermore, four different domain adaptation methods are studied and implemented to improve the performance of classifiers by leveraging labelled samples from other domains. The best result is achieved by Adaptive Multiple Kernel Learning (A-MKL) through selecting two distance matrices smartly, and the recorded mean average precision $61.4\%$ is better than that reported in the studied paper \cite{duan2012visual}. Comprehensive experiments have been conducted on these various approaches, and detailed analysis is also included. Last but not least, a web-based demo system is built to better present the work in this project. \\
+
+\noindent As for future recommendations, there are three suggestions. The first one is to incorporate more types of features including space-time feature and acoustic feature. With more features extracted from videos, the recognition system is expected to be more robust. Secondly, more concept attribute detectors could be employed to represent videos with more attributes. In this way, the produced attribute vector shall possess more discriminative power. Lastly, various domain adaptations could be combined wisely. For instance, Feature Replication could be incorporated into Adaptive Multiple Kernel Learning.  
